# PhysicsCode

./: .gitignore  README.md  main.cpp  notebook.ipynb
faster/: CMakeLists.txt  buttonTest.cpp  main.cpp  pendulum.cpp  pendulumTest.cpp
faster/include/: button.hpp
faster/src/: button.cpp
python/: .gitignore  notebook.ipynb
resources/: logo.docx
